<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <com.jiuye.baseframex.widget.MyViewPager
        android:id="@+id/mViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomLayout"
        android:background="@color/colorWhite"
        app:isScroll="false" />

    <FrameLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <RadioGroup
            android:id="@+id/mGroup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/white"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radioBtn1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:button="@null"
                android:drawableTop="@drawable/tab1_selecteor"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/tab_menu_1"
                android:textColor="@color/tab_selected_colors"
                android:textSize="12sp"
                tools:text="首页" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radioBtn2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:button="@null"
                android:drawableTop="@drawable/tab2_selecteor"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/tab_menu_2"
                android:textColor="@color/tab_selected_colors"
                android:textSize="12sp"
                tools:text="商城" />

            <!--     <android.support.v7.widget.AppCompatTextView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:background="@android:color/transparent" />-->
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radioBtnCenter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/d8"
                android:layout_weight="1"
                android:background="@null"
                android:button="@null"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/tab_menu_5"
                android:textColor="@color/tab_selected_colors"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radioBtn3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:button="@null"
                android:drawableTop="@drawable/tab3_selecteor"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/tab_menu_3"
                android:textColor="@color/tab_selected_colors"
                android:textSize="12sp"
                tools:text="发现" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radioBtn4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:button="@null"
                android:drawableTop="@drawable/tab4_selecteor"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/tab_menu_4"
                android:textColor="@color/tab_selected_colors"
                android:textSize="12sp"
                tools:text="我的" />
        </RadioGroup>
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_above="@+id/bottomLayout"
        android:background="#DDDDDD" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/centerTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:drawableTop="@drawable/menu_tab_center"
        android:drawablePadding="4dp"
        android:enabled="true"
        android:paddingBottom="10dp"
        android:textColor="@color/tab_selected_colors"
        android:textSize="12sp" />
</RelativeLayout>